fix : delete overflow code

--- a/clone/mdn/main.css
+++ b/clone/mdn/main.css
@@ -4,7 +4,6 @@
 
 body {
   margin: 0;
-  overflow-y: auto;
 }
 
 table,
@@ -113,7 +112,6 @@ tr:nth-child(even) {
   list-style: none;
   margin: 0 auto 0 0;
   min-width: 0;
-  overflow-x: hidden;
   padding: 2px;
 }
 
